--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Profiles#index</h1>
-<p>Find me in app/views/profiles/index.html.erb</p>
+<h1>ALL ARTISTS</h1>
+<% @artists.each do |artist| %>
+  <%= link_to artist[:name], profile_path(artist) %>
+<% end %>
