--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,13 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+//doggie,EW
+$indigo: #090088;
+$yellow: #ffbd39;
+
+//new
+$jean-c: #03576C;
+$yel-hangar: #FFE837;
+$bv-hangar: #010059;
