--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,10 +1,12 @@
 .avatar {
   width: 40px;
   border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 .avatar-large {
   width: 56px;
   border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 .avatar-bordered {
   width: 40px;
