--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -48,3 +48,19 @@
   padding: 10px;
   overflow: scroll;
 }
+
+.card-login {
+  background-size: cover;
+  background-position: center;
+  background-color: white;
+  width: 60%;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  color: $gray;
+  margin: 10px auto;
+  padding: 20px;
+  overflow:scroll;
+  h2, .form-inputs {
+    color: $bv-hangar;
+  }
+}
