profile show and chatbox index views

--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -1,1 +1,5 @@
-index.html.erb
+<h1>YOUR MESSAGES</h1>
+<% @chatboxes.each_with_index do |chatbox, i| %>
+  <%= chatbox[:sender] == current_user ? chatbox[:sender].profile.username : chatbox[:recipient].profile.username %>
+  <%= @last_msgs[i][:content] %>
+<% end %>
