--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,7 +5,7 @@
   <%= link_to 'Create an event with this artist!', new_profile_event(@profile) %>
 <% end %>
 
-<% if current_user.bar && @profile.is_artist %>
+<% if !current_user.bars.empty? && @profile.is_artist %>
   <%= link_to "Contact this artist !", chatboxes_path(@profile) %>
 <% end %>
 
