chatbox show views

--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -2,4 +2,5 @@
 <% @chatboxes.each_with_index do |chatbox, i| %>
   <%= chatbox[:sender] == current_user ? chatbox[:sender].profile.username : chatbox[:recipient].profile.username %>
   <%= @last_msgs[i][:content] %>
+  <%= link_to "Read previous", chatbox_path(chatbox) %>
 <% end %>
