added edit and delete button

--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -4,7 +4,7 @@
 <% @pictures.each do |picture| %>
   <%= picture[:photo] %>
   <% if current_user == @bar.user %>
-    <%= link_to 'delete this picture', bar_picture(picture), method: :delete, data: { confirm: "Are you sure?" }, %>
+    <%= link_to 'delete this picture', bar_picture(picture), method: :delete, data: { confirm: "Are you sure?" } %>
   <% end %>
 <% end %>
 
