added send button

--- a/app/views/bars/_form.html.erb
+++ b/app/views/bars/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@bar) do |b| %>
-  <%= f.error_notification %>
+  <%= b.error_notification %>
   <%= b.input :name,
               required: true,
               autofocus: true,
