--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -1,5 +1,4 @@
-<h1><%= @bar[:name] %></h1>
-
+<h1>Bar of <%= link_to @bar[:name].capitalize, profile_path(@bar.user.profile) %> </h1>
 <!-- FOR CAROUSEL -->
 <% @pictures.each do |picture| %>
   <%= picture[:photo] %>
@@ -9,3 +8,8 @@
 <% end %>
 
 <%= link_to 'Add a picture', new_bar_picture(@bar) if current_user == @bar.user %>
+
+
+<p><%= @bar[:description] %></p>
+<p><%= @bar[:address] %></p>
+<br><%= link_to "Back to list of bars", bars_path %>
