--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,9 @@
 <h1>LIST OF EVENTS</h1>
 <% @events.each do |event| %>
+  <%= cl_image_tag event.photo, height: 200, width: 250, crop: :fill %>
+  <p><%= event.name %>
   <p><%= event[:description] %></p>
+  <p><%= event[:status] %>
   <%= link_to 'See more details', event_path(event) %>
+
 <% end %>
