--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,9 +6,9 @@
 <% end %>
 
 <% if !current_user.bars.empty? && @profile.is_artist %>
-  <%= link_to "Contact this artist !", chatboxes_path(@profile) %>
+  <%= link_to "Contact this artist !", profile_chatboxes_path(@profile) %>
 <% end %>
 
 <% if current_user.profile.is_artist && @profile.is_bar_manager %>
-  <%= link_to "Contact this bar !", chatboxes_path(@profile) %>
+  <%= link_to "Contact this bar !", profile_chatboxes_path(@profile) %>
 <% end %>
