improvements of view, index, navbarfix, etc

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
 <h1>Pages#home</h1>
-<p class="b-border-tbg">Home</p>
+
+<%= link_to "Discover our Artists", profiles_path, class: "b-border-tbg" %>
+<%= link_to "Disciver our bars", bars_path, class: "b-border-tbg" %>
+
