buttons login signup ok

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,14 +26,14 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Update" %>
-      </div>
+        <%= f.button :submit, "Update", class: "b-border-tbg" %>
+      </div><br>
     <% end %>
 
     <h3>Cancel my account</h3>
 
-    <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+    <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete,class: "b-border-tbg"  %></p>
 
-    <%= link_to "Back", :back %>
+    <%= link_to "Back", :back, class: "b-border-tbg" %>
 
   </div>
