--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,10 +20,10 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Sign up" %>
-      </div>
+        <%= f.button :submit, "Sign up", class: "b-border-tbg" %>
+      </div><br>
     <% end %>
 
-    <%= render "devise/shared/links" %>
+    <%= render "devise/shared/links"%>
 
   </div>
