--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,14 +1,14 @@
 <h1>Profiles#show</h1>
 <p>Find me in app/views/profiles/show.html.erb</p>
 
-<% if current_user.profile.is_bar_manager && @profile.is_artist %>
-  <%= link_to 'Create an event with this artist!', new_profile_event(@profile) %>
+<% if current_user.bars && @profile.is_artist %>
+  <%= link_to 'Create an event with this artist!', new_profile_event_path(@profile) %>
 <% end %>
 
 <% if !current_user.bars.empty? && @profile.is_artist %>
-  <%= link_to "Contact this artist !", profile_chatboxes_path(@profile) %>
+  <%= link_to "Contact this artist !", profile_chatboxes_path(@profile), method: :post %>
 <% end %>
 
-<% if current_user.profile.is_artist && @profile.is_bar_manager %>
-  <%= link_to "Contact this bar !", profile_chatboxes_path(@profile) %>
+<% if @profile.is_bar_manager && current_user.profile.is_artist %>
+  <%= link_to "Contact this bar !", profile_chatboxes_path(@profile), method: :post %>
 <% end %>
