--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,14 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <div class="container">
+
+      <div class="fixed transform" id="thisone" onclick="waithide()">
+      <% if current_user && current_user.profile == nil %>
+        <p><%= link_to "Register as an artist ✨", new_profile_path, class: "b-border-tbg" %> </p>
+        <p><%= link_to "Register your bar 🥂", new_profile_path, class: "b-border-tbg" %></p>
+      <% end %>
+      </div>
+
       <%= yield %>
     </div><br><br><br>
     <%= render 'shared/footer' %>
