--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
     <%= render 'shared/flashes' %>
     <div class="container">
 
-      <div class="fixed transform" id="thisone" onclick="waithide()">
-      <% if current_user && current_user.profile == nil %>
+      <div class="fixed transform">
+      <% if (current_user && current_user.profile == nil) && !( params[:controller] == 'profiles' && params[:action]== 'new' ) %>
         <p><%= link_to "Register as an artist ✨", new_profile_path, class: "b-border-tbg" %> </p>
         <p><%= link_to "Register your bar 🥂", new_profile_path, class: "b-border-tbg" %></p>
       <% end %>
