--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -5,11 +5,11 @@
     <%= cl_image_tag picture.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
       <div class="left-description">
   <% if current_user == @bar.user %>
-    <%= link_to 'delete this picture', bar_picture(picture), method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to 'delete this picture', bar_picture_path(picture.bar, picture), method: :delete, data: { confirm: "Are you sure?" } %>
   <% end %>
 <% end %>
 
-<%= link_to 'Add a picture', new_bar_picture(@bar) if current_user == @bar.user %>
+<%= link_to 'Add a picture', new_bar_picture_path(@bar) if current_user == @bar.user %>
 
 
 <p><%= @bar[:description] %></p>
