--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@event) do |f| %>
+<%= simple_form_for [@profile, @event] do |f| %>
   <%= f.error_notification %>
 
   <%= f.input :name %>
