--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,5 +1,5 @@
 <h1>select a picture to upload</h1>
-<%= simple_form_for(@picture) do |f| %>
+<%= simple_form_for [@bar, @picture] do |f| %>
   <%= f.error_notification %>
   <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
