Bug fixes, new event creation form, ..

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-<% if current_user == @event.user %>
+<% if current_user == @event.bar.user %>
   <h1>EDIT EVENT</h1>
   <%= render 'form' %>
 <% end %>
