--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,8 +5,8 @@
  <h3>What</h3>
  <p><%= @event[:description] %></p>
   <h3>When</h3>
-  <p><%= @event[:start_date].strftime("From %d/%M/%Y at %H:%M") %></p>
-  <p><%= @event[:end_date].strftime("To %d/%M/%Y at %H:%M") %></p>
-  <p><%= link_to "Back to #{@artist[:username]}'s profile", profile_path(@artist.profile) %></p>
+  <p><%= @event[:start_date].strftime("From: %d %B %Y at %Hh%M") %></p>
+  <p><%= @event[:end_date].strftime("To: %d %B %Y at %Hh%M") %></p>
+  <p><%= link_to "Back to #{@artist[:username]}'s profile", profile_path(@artist) %></p>
 
 <%= link_to 'See the bar profile', bar_path(@event.bar) %>
