--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -1,6 +1,6 @@
 <h1>YOUR MESSAGES</h1>
 <% @chatboxes.each_with_index do |chatbox, i| %>
-  <%= chatbox.sender == current_user ? chatbox.sender.profile.username : chatbox.recipient.profile.username %>
-  <%= @last_msgs[i][:content] if !@last_msg.nil? %>
+  <p>CONVO WITH: <%= chatbox.sender != current_user ? chatbox.sender.profile.username : chatbox.recipient.profile.username %></p>
+  <p>LAST MSG: <%= @last_msgs[i][:content] if !@last_msg.nil? %></p>
   <%= link_to "Read previous", chatbox_path(chatbox) %>
 <% end %>
