--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -1,5 +1,5 @@
 <h1>CONVO BETWEEN: <%= @chatbox.sender.profile.username %> AND <%= @chatbox.recipient.profile.username %></h1>
-
+<h2>PREVIOUS MESSAGES:</h2>
 <% @messages.each do |message| %>
   <h2><%= message.user.profile.username %>:</h2> <p><%= message[:content] %> </p>
   <p>posted at: <%= message[:date] %></p>
@@ -9,6 +9,8 @@
     <%= link_to 'Delete this message', chatbox_message_path(message), method: :delete, data: { confirm: "Are you sure?" } %>
   <% end %>
 <% end %>
+
+<h2>SEND NEW MESSAGE:</h2>
 
 <%= simple_form_for [@chatbox, @message] do |b| %>
   <%= b.error_notification %>
