Added events to Pages#home

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,10 +1,13 @@
 <h1>LIST OF EVENTS</h1>
 <% @events.each do |event| %>
-  <div>
-  <p><%= link_to 'See more details', event_path(event) %></p>
-  <%= cl_image_tag event.photo, height: 200, width: 250, crop: :fill %>
-  <p><%= event.name %>
-  <p><%= event[:description] %></p>
+
+  <div class="card-product">
+  <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
+  <div class="card-product-infos">
+    <h2><%= event.name %></h2>
+    <p><%= event[:description] %></p>
+    <p><%= link_to 'See more details', event_path(event) %></p>
+  </div>
   </div>
 
 <% end %>
