optimized routes for edit/update

--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@chatbox, @message] do |b| %>
+<%= simple_form_for [@message] do |b| %>
   <%= b.error_notification %>
   <%= b.input :content %>
   <%= b.button :submit, "Send" %>
