--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -6,7 +6,7 @@
 
   <% if message.user == current_user %>
     <%= link_to 'Edit this message', edit_message_path(message) %>
-    <%= link_to 'Delete this message', chatbox_message_path(message), method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to 'Delete this message', message_path(message), method: :delete, data: { confirm: "Are you sure?" } %>
   <% end %>
 <% end %>
 
