--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -5,10 +5,11 @@
 <% end %>
 
     <div class="find">
+
       <div
       id="map"
       style="width: 100%;
-      height: 100%;"
+      height: 300px;"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
