--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -19,5 +19,16 @@
 .find {
   width: 100%;
   height: 300px;
+  margin: 10px auto;
 }
+
+#map {
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  margin: 10px auto;
+}
+
+mapboxgl-ctrl-geocoder--input {
+    margin: 10px auto;
+}
+
 
