--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -15,7 +15,7 @@
       <div
         id="map"
         style="width: 100%;
-        height: auto; margin: 10px auto;"
+        height: auto; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
         data-markers="<%= @markers.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
       ></div>
