--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -2,3 +2,13 @@
 <% @bars.each do |bar| %>
   <%= link_to bar[:name], bar_path(bar) %>
 <% end %>
+
+      <div
+      id="map"
+      style="width: 100%;
+      height: 300px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
+
+
