--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Dashboard", "#", class: "nav-link" %>
+          <%= link_to "Dashboard", dashboard_profile_path(current_user), class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Messages", chatboxes_path , class: "nav-link" %>
