--- a/app/views/bars/edit.html.erb
+++ b/app/views/bars/edit.html.erb
@@ -1,3 +1,5 @@
-<% if current_user == @bar.user %>
-  <%= render 'form' %>
-<% end %>
+<div class="container">
+  <% if current_user == @bar.user %>
+    <%= render 'form' %>
+  <% end %>
+</div>
