--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,7 +1,8 @@
-<h1>BAR INDEX</h1>
-<% @bars.each do |bar| %>
-  <%= link_to bar[:name], bar_path(bar) %>
-<% end %>
+<div class="container">
+  <h1>BAR INDEX</h1>
+  <% @bars.each do |bar| %>
+    <%= link_to bar[:name], bar_path(bar) %>
+  <% end %>
 
       <div
       id="map"
@@ -10,5 +11,6 @@
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
+</div>
 
 
