--- a/app/views/bars/new.html.erb
+++ b/app/views/bars/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Add your bar infos</h1>
-<%= render 'form' %>
+<div class="container">
+  <h1>Add your bar infos</h1>
+  <%= render 'form' %>
+</div>
