--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -1,19 +1,21 @@
-<h1>CONVO BETWEEN: <%= @chatbox.sender.profile.username %> AND <%= @chatbox.recipient.profile.username %></h1>
-<h2>PREVIOUS MESSAGES:</h2>
-<% @messages.each do |message| %>
-  <h2><%= message.user.profile.username %>:</h2> <p><%= message[:content] %> </p>
-  <p>posted at: <%= message[:date] %></p>
+<div class="container">
+  <h1>CONVO BETWEEN: <%= @chatbox.sender.profile.username %> AND <%= @chatbox.recipient.profile.username %></h1>
+  <h2>PREVIOUS MESSAGES:</h2>
+  <% @messages.each do |message| %>
+    <h2><%= message.user.profile.username %>:</h2> <p><%= message[:content] %> </p>
+    <p>posted at: <%= message[:date] %></p>
 
-  <% if message.user == current_user %>
-    <%= link_to 'Edit this message', edit_message_path(message) %>
-    <%= link_to 'Delete this message', message_path(message), method: :delete, data: { confirm: "Are you sure?" } %>
+    <% if message.user == current_user %>
+      <%= link_to 'Edit this message', edit_message_path(message) %>
+      <%= link_to 'Delete this message', message_path(message), method: :delete, data: { confirm: "Are you sure?" } %>
+    <% end %>
   <% end %>
-<% end %>
 
-<h2>SEND NEW MESSAGE:</h2>
+  <h2>SEND NEW MESSAGE:</h2>
 
-<%= simple_form_for [@chatbox, @message] do |b| %>
-  <%= b.error_notification %>
-  <%= b.input :content %>
-  <%= b.button :submit, "Send" %>
-<% end %>
+  <%= simple_form_for [@chatbox, @message] do |b| %>
+    <%= b.error_notification %>
+    <%= b.input :content %>
+    <%= b.button :submit, "Send" %>
+  <% end %>
+</div>
