--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -1,7 +1,9 @@
-<h1>YOUR MESSAGES</h1>
-<% @chatboxes.each_with_index do |chatbox, i| %>
-  <p>CONVO WITH: <%= chatbox.sender != current_user ? chatbox.sender.profile.username : chatbox.recipient.profile.username %></p>
-  <p>LAST MSG: <%= @last_msgs[i][:content] if !@last_msgs[i].nil? %></p>
-   <p>from: <%= @last_msgs[i].user.profile.username if !@last_msgs[i].nil? %></p>
-  <%= link_to "Read previous", chatbox_path(chatbox) %>
-<% end %>
+<div class="container">
+  <h1>YOUR MESSAGES</h1>
+  <% @chatboxes.each_with_index do |chatbox, i| %>
+    <p>CONVO WITH: <%= chatbox.sender != current_user ? chatbox.sender.profile.username : chatbox.recipient.profile.username %></p>
+    <p>LAST MSG: <%= @last_msgs[i][:content] if !@last_msgs[i].nil? %></p>
+     <p>from: <%= @last_msgs[i].user.profile.username if !@last_msgs[i].nil? %></p>
+    <%= link_to "Read previous", chatbox_path(chatbox) %>
+  <% end %>
+</div>
