--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,19 +1,21 @@
-<h1>Edit <%= @profile.username %></h1>
+<div class="container">
+  <h1>Edit <%= @profile.username %></h1>
 
-<% if current_user == @profile.user %>
+  <% if current_user == @profile.user %>
 
-    <%= simple_form_for(@profile) do |f| %>
-    <div class="card-profile">
-    <%= f.input :photo %>
-    <%= f.input :photo_cache, as: :hidden %>
-    <%= f.input :username %>
-      <div class="profile-description">
-        <% if @profile.is_artist %>
-          <%= f.input :artist_description %>
-        <% end %>
-        <%= f.input :address %>
-      </div>
-    <%= f.button :submit, "Update profile" %>
+      <%= simple_form_for(@profile) do |f| %>
+      <div class="card-profile">
+      <%= f.input :photo %>
+      <%= f.input :photo_cache, as: :hidden %>
+      <%= f.input :username %>
+        <div class="profile-description">
+          <% if @profile.is_artist %>
+            <%= f.input :artist_description %>
+          <% end %>
+          <%= f.input :address %>
+        </div>
+      <%= f.button :submit, "Update profile" %>
+    <% end %>
+
   <% end %>
-
-<% end %>
+</div>
