--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,8 +1,9 @@
-<h1>Profiles#index</h1>
-<h1>ALL ARTISTS</h1>
-<% @artists.each do |artist| %>
-  <%= link_to artist[:username], profile_path(artist) %>
-<% end %>
+<div class="container">
+  <h1>Profiles#index</h1>
+  <h1>ALL ARTISTS</h1>
+  <% @artists.each do |artist| %>
+    <%= link_to artist[:username], profile_path(artist) %>
+  <% end %>
 
 
       <div
@@ -12,4 +13,5 @@
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
+</div>
 
