--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome aboard ! </h1>
-<%= render 'form' %>
+<div class="container">
+  <h1>Welcome aboard ! </h1>
+  <%= render 'form' %>
+</div>
