--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -14,6 +14,7 @@
 
 .card-img-v {
   width: 100%;
+  background-color: white;
   height: auto;
   text-align: left;
   border-radius: 5px;
@@ -46,9 +47,47 @@
   }
 }
 
+.card-hz-s{
+  background-color:white;
+  height: 100px;
+  display: flex;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  align-items: center;
+  margin: 10px auto;
+  img {
+    height: 100%;
+    width: auto;
+  }
+  .left-description {
+    line-height: 90%;
+    h2 , i {
+      color: $gray;
+    }
+  }
+}
+
 .card-profile{
   background-color:white;
   height: 400px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  margin: 10px auto;
+  img {
+    height: 100%;
+    width: auto;
+  }
+  .left-description {
+    line-height: 90%;
+    h2 , i {
+      color: $gray;
+    }
+  }
+}
+
+.card-profile-s{
+  background-color:white;
+  height: 200px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
