--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,9 +12,13 @@
           <%= link_to "Messages", chatboxes_path , class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "http://download.seaicons.com/icons/cedarseed/cocktails/128/Negroni-icon.png", class: "avatar-icon dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "My profile", profile_path(current_user.profile), class: "dropdown-item" %>
+
+            <%if current_user.profile.is_artist || current_user.profile.is_bar_manager %>
+              <%= link_to "My profile", profile_path(current_user.profile), class: "dropdown-item" %>
+            <%end%>
+
             <%= link_to "Another action", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
