--- a/app/views/shared/_register.html.erb
+++ b/app/views/shared/_register.html.erb
@@ -2,8 +2,8 @@
   <% if user_signed_in? %>
     <% if (!current_user.profile.is_artist && current_user.bars.empty?) %>
     <!-- && !( params[:controller] == 'profiles' && params[:action]== 'edit' )  -->
-      <p><%= link_to "Register as an artist ✨", new_profile_path, class: "b-border-tbg" %> </p>
-      <p><%= link_to "Register your bar 🥂", new_profile_path, class: "b-border-tbg" %></p>
+      <p><%= link_to "Register as an artist ✨", new_profile_path, class: "b-border-whitebg" %> </p>
+      <p><%= link_to "Register your bar 🥂", new_profile_path, class: "b-border-whitebg" %></p>
     <% end %>
    <% end %>
 </div>
